[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "meta-truth"
version = "0.0.1"
authors = [
    {name="Machina Ratiocinatrix", email="machina.ratio@gmail.com"},
    {name="Alexander Fedotov", email="alex.fedotov@aol.com"}
]
description = "Meta-Truth ..."
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]
keywords = ["meta-truth"]
dependencies = [
    "pyyaml == 6.0.3"
]

[project.scripts]
meta-truth = "meta_truth.cli:run"

[project.urls]
"Homepage" = "https://github.com/meta-truth/meta-truth"

[dependency-groups]
dev = ["pytest>=8.0.0"]